Fix: Responsividade do Cropper ao redimensionar tela

--- a/src/sections/ImageEditor/Tabs/styles.scss
+++ b/src/sections/ImageEditor/Tabs/styles.scss
@@ -19,6 +19,8 @@
       margin: auto;
       // box-sizing: border-box;
       // resize: horizontal;
+      height: 320px;
+      width: 100%;
     }
     .zoom-slider {
       width: 280px;
